--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
+          registry-url: https://registry.npmjs.org
           node-version: 24
           cache: "pnpm"
 
